--- a/index.html
+++ b/index.html
@@ -1,3 +1,68 @@
-<!html>
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>个人网站</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 10px;
+        }
+        section {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>欢迎来到我的个人网站</h1>
+    </header>
+    <nav>
+        <a href="#about">关于我</a>
+        <a href="#portfolio">作品集</a>
+        <a href="#contact">联系我</a>
+    </nav>
+    <section id="about">
+        <h2>关于我</h2>
+        <p>我是一个热爱编程和创作的人，欢迎访问我的个人网站。</p>
+    </section>
+    <section id="portfolio">
+        <h2>作品集</h2>
+        <p>这里展示了我的一些作品和项目。</p>
+    </section>
+    <section id="contact">
+        <h2>联系我</h2>
+        <p>如果您有任何问题或合作建议，可以通过以下方式联系我：</p>
+        <p>Email: your.email@example.com</p>
+        <p>电话: +1234567890</p>
+    </section>
+</body>
 </html>
